[gd_scene format=3 uid="uid://cyc8taatq1lyu"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_mainmenu"]

[node name="MainMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_mainmenu")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
theme_override_constants/separation = 20

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Ground Control"
horizontal_alignment = 1

[node name="AuthorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "by Berus"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewRunButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "New Run"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Exit"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
